gcc/testsuite/rust/rustc/ui/issues/issue-16683.rs
trait T<'a> {
    fn a(&'a self) -> &'a bool;
    fn b(&self) {
        self.a(); // { dg-error ".E0495." "" { target *-*-* } }
    }
}

fn main() {}

